--- a/common-library/build.gradle
+++ b/common-library/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'org.springframework.boot' version '2.6.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'maven-publish'
 }
+
+apply plugin: 'maven-publish'
 
 group = 'com.yanesh.evaluator'
 version = '0.0.1-SNAPSHOT'
@@ -25,6 +28,23 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier "sources"
+}
+
+bootRun.enabled = false
+bootJar.enabled = false
+jar.enabled = true
+
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact sourceJar
+        }
+    }
 }
