--- a/common-library/build.gradle
+++ b/common-library/build.gradle
@@ -8,7 +8,7 @@ plugins {
 apply plugin: 'maven-publish'
 
 group = 'com.yanesh.evaluator'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '11'
 
 configurations {
@@ -35,7 +35,10 @@ task sourceJar(type: Jar) {
 
 bootRun.enabled = false
 bootJar.enabled = false
-jar.enabled = true
+jar {
+    enabled = true
+    archiveClassifier = ''
+}
 
 tasks.named('test') {
     useJUnitPlatform()
@@ -44,7 +47,7 @@ tasks.named('test') {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifact sourceJar
+            artifact jar
         }
     }
 }
