--- a/QuestionAPI/src/main/resources/application.yaml
+++ b/QuestionAPI/src/main/resources/application.yaml
@@ -1,2 +1,12 @@
 api:
   version: 1.0
+  
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8900/eureka
+  instance:
+    instance-id: ${spring.application.name}:${random-value}
+    
+server:
+  port: 0
