--- a/QuestionAPI/src/main/resources/application.yaml
+++ b/QuestionAPI/src/main/resources/application.yaml
@@ -8,5 +8,10 @@ eureka:
   instance:
     instance-id: ${spring.application.name}:${random-value}
     
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/evaluator
+    
 server:
   port: 0
