--- a/QuestionAPI/build.gradle
+++ b/QuestionAPI/build.gradle
@@ -25,6 +25,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'com.yanesh.evaluator:common-library:0.0.1'
     annotationProcessor 'org.projectlombok:lombok'
