--- a/eureka/src/main/resources/application.yaml
+++ b/eureka/src/main/resources/application.yaml
@@ -1,10 +1,16 @@
 server:
   port: 8900
+  
+spring:
+  application:
+    name: eureka-server
 
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  instance:
+    hostname: localhost
     
 logging:
   level:
