--- a/QuestionAPI/src/main/resources/application.yaml
+++ b/QuestionAPI/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8900/eureka
   instance:
-    instance-id: ${spring.application.name}:${random-value}
+    instance-id: ${spring.application.name}:${random.value}
     
 spring:
   data:
