Upate question api

--- a/QuestionAPI/src/main/resources/application.yaml
+++ b/QuestionAPI/src/main/resources/application.yaml
@@ -12,6 +12,11 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/evaluator
+  application:
+    name: question-api
     
 server:
   port: 0
+  
+collections:
+  question: questions
