--- a/dev-environment/docker-compose.yaml
+++ b/dev-environment/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
 
   mysql:
     image: mysql:5.7
+    ports:
+      - 3306:3306
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
